@@ -3375,6 +3375,8 @@ vim.json.encode({obj}, {opts})                             *vim.json.encode()*
                 • indent: (string) (default "") String used for indentation at
                   each nesting level. If non-empty enables newlines and a
                   space after colons.
+                • sort_keys: (boolean) (default false) Sort object keys in
+                  alphabetical order.
 
     Return: ~
         (`string`)
